# kalkafox-img

./: .gitignore  Cargo.toml  Dockerfile  build.Dockerfile  build.dockerfile  nixpacks.toml
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Cube.tsx
scripts/: build.sh  start.sh
src/: main.rs
