[package]
name = "kalkafox-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
mongodb = "2.4.0"
mongodb-gridfs = "0.2.5"
rand = "0.8.5"
warp = "0.3.3"
futures-util = "0.3.27"
bytes = "1.4.0"
mime_guess = "2.0.4"
